veevavault/1.3/modules/ROOT/pages/veevavault-connector-studio.adoc
= Use Studio to Configure Veeva Vault Connector 1.3 - Mule 4
:page-aliases: connectors::veevavault/veevavault-connector-studio.adoc, connectors::veevavault/veevavault-design-center.adoc

Anypoint Studio (Studio) editors help you design and update your Mule applications, properties, and configuration files.

To add and configure a connector in Studio:

. <<create-mule-project,Create a Mule project>>.
. <<add-connector-to-project,Add the connector to your Mule project>>.
. <<configure-source,Configure a source for the connector's flow>>.
. <<add-connector-operation,Add a connector operation to the flow>>.
. <<configure-global-element,Configure a global element for the connector>>.
. <<configure-other-fields,Configure the other connector fields>>.

When you run the connector, you can view the app log to check for problems in real time, as described in <<view-app-log,View the App Log>>.

If you are new to configuring connectors in Studio, see xref:connectors::introduction/intro-config-use-studio.adoc[Use Studio to Configure a Connector]. If, after reading this topic, you need additional information about the connector fields, see the xref:veevavault-connector-reference.adoc[Veeva Vault Reference].

[[create-mule-project]]
== Create a Mule Project

In Studio, create a new Mule project in which to add and configure the connector:

. In Studio, select *File > New > Mule Project*.
. Enter a name for your Mule project and click *Finish*.

[[add-connector-to-project]]
== Add the Connector to Your Mule Project

Add Veeva Vault Connector to your Mule project to automatically populate the XML code with the connector's namespace and schema location and add the required dependencies to the project's `pom.xml` file:

. In *Mule Palette*, click *(X) Search in Exchange*.
. In *Add Dependencies to Project*, type `veeva vault` in the search field.
. Click Veeva Vault in *Available modules*.
. Click *Add*.
. Click *Finish*.

Adding a connector to a Mule project in Studio does not make that connector available to other projects in your Studio workspace.

[[configure-source]]
== Configure a Source

A source initiates a flow when a specified condition is met.
You can configure one of these sources to use with Veeva Vault Connector:

* HTTP Listener +
Initiates a flow each time it receives a request on the configured host and port
* Scheduler +
Initiates a flow when a time-based condition is met

For example, to configure an HTTP Listener source, follow these steps:

. In *Mule Palette*, select *HTTP > Listener*.
. Drag *Listener* to the Studio canvas.
. On the *Listener* configuration screen, optionally change the value of the *Display Name* field.
. Specify a value for the *Path* field.
. Click the plus sign (*+*) next to the *Connector configuration* field to configure a global element that can be used by all instances of the HTTP Listener source in the app.
. On the *General* tab, specify connection information for the connector.
. On the *TLS* tab, optionally specify the TLS information for the connector.
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

[[add-connector-operation]]
== Add a Connector Operation to the Flow

When you add a connector operation to your flow, you are specifying an action for that connector to perform.

To add an operation for Veeva Vault Connector, follow these steps:

. In *Mule Palette*, select *Veeva Vault* and then select the desired operation.
. Drag the operation onto the Studio canvas, next to the input source.

[[configure-global-element]]
== Configure a Global Element for the Connector

When you configure a connector, configure a global element that all instances of that connector in the app can use. Configuring a global element requires you to provide the authentication credentials that the connector requires to access the target Veeva Vault system. Veeva Vault Connector supports Basic authentication.

To configure the global element for Veeva Vault Connector, follow these steps:

. Select the operation in the Studio canvas.
. In the *General* configuration screen for the operation, click the *Add* icon (image:add-icon.png[2%,2%]) to access the global element configuration fields.
. In the *General* tab, in *Connection*, select the <<basic-auth, Basic authentication>> method to configure.
+
You can reference a configuration file that contains ANT-style property placeholders (recommended), or you can enter your authorization credentials in the global configuration properties. For information about the benefits of using property placeholders and how to configure them, see xref:connectors::introduction/intro-connector-configuration-overview.adoc[Anypoint Connector Configuration].
. In the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

[[basic_auth]]
=== Basic Authentication

Enter the following information in the *General* tab of the *Global Element Properties* screen to configure Basic authentication:

[%header,cols=30s,70a]
|===
|Field |User Action
|Name | Configuration name.
|Vault URL | URL of the Veeva Vault instance required for the connection.
|Username | Username used to initialize the session.
|Password | Password used to authenticate the user.
|Client Id | Client ID to send with each request header to the Veeva Vault instance for tracking purposes.
|===

The following image shows an example of configuring Basic authentication:

image::basic-auth.png[Authentication fields completed in the *General* tab for Basic authentication]

[[configure-global-element]]
== Configure the Connector

To use Veeva Vault Connector in your Mule app, configure a global Veeva Vault element that can be used by all Veeva Vault Connector operations in the application.

. To create a global Veeva Vault element, click the *Global Elements* tab at the bottom of the Studio canvas and click *Create*.
+
. In the *Choose Global Type* window, expand *Connector Configuration*, click *Veeva Vault Config*, and click *OK*.
+
. In the Veeva Vault Config window, in the *General* tab, enter the following configuration values:
+
image::veevavault-connector-basic-authentication-general.png[]
+
[%header%autowidth.spread]
|===
|*Field* |*Description*
|*Name* |Enter a name for this configuration to reference it later.
|*Vault URL* |Enter the Veeva Vault instance URL.
|*Username* |Enter the Veeva Vault instance username.
|*Password* |Enter the password that corresponds to the username.
|*Version* |Enter the Veeva Vault instance version.
|*Client Id* |Enter the client ID to send with each request in the header for tracking purposes, in the format: `\{organisation}-{company\|team}`. +
The client ID is prefixed with "mulesoft" and has a suffix with "client-vaultconnector" internally, for example: `mulesoft-abcpharma-clinicalprod-client-vaultconnector`.
|===
+
In the previous image, the placeholder values refer to a configuration file placed in the folder (`src/main/resources`) of your project. Although you can hardcode your credentials into the global configuration properties, you can simplify maintenance and achieve better project reusability if you reference a configuration file that contains these values instead. Keeping these values in a separate file is useful if you need to deploy to different environments in which your access credentials differ (such as production, development, and QA). +
The following example is a snippet of the `configuration.yaml` file under the `src/main/resources/config` folder:
+
[source,yaml,linenums]
----
	#Veeva Vault details
	veeva:
		vaultURL: "https://xxxx-xxxx.veevavault.com"
		username: "someone@example.com"
		password: "xxxxxxx"
		version : "v20.1"
		clientId: "mulesoft-abcpharma-clinicalprod-client-vaultconnector"
----
+
The connection configuration performs basic authentication, which accepts the required Vault URL, username, and password parameters to connect to the Veeva Vault instance to retrieve the session. The retrieved session is used for sending requests by each operation configured in the Mule application.
. In the Veeva Vault Config window, in the *Advanced* tab, configure the burst API limit:
+
image::veevavault-connector-basic-authentication-advanced.png[]
+
*Burst API Limit Profile*
+
The burst API limit profile configuration to act upon if the specified burst API limit of the Veeva Vault API reaches the threshold of the configured value or is exceeded.
+
If *Burst API limit config* is enabled (default), then the connector evaluates the Veeva Vault API's response header (`X-VaultAPI-BurstLimitRemaining`) value against the specified API Limit threshold value. If the remaining burst API limit reaches or exceeds this threshold value, the connector waits for the specified amount of time to restart the count for the *Burst Limit Remaining*.
+
Following is an example from the application logs, showing a warning message at `2019-06-06 10:34:45,096` and subsequently waiting for five minutes before rerunning as shown in the next message at `2019-06-06 10:39:45,098`:
+
----
WARN 2019-06-06 10:34:45,096 [[MuleRuntime].io.27: [veevavault-connector-demo].get-documents-operationFlow.BLOCKING @2dd2ffaf] [event: 99716950-8818-11e9-90e2-d61515f42856] org.mule.extension.veevavault.internal.service.HttpRequestService: Burst API Limit remaining calls [1997] has exceeded/reached an API Limit Profile threshold set as [1997]. As per API Limit Profile, Veeva Vault Connector will wait for [5] MINUTES.

WARN 2019-06-06 10:39:45,098 [[MuleRuntime].io.27: [veevavault-connector-demo].get-documents-operationFlow.BLOCKING @2dd2ffaf] [event: 99716950-8818-11e9-90e2-d61515f42856] org.mule.extension.veevavault.internal.operations.VeevaVaultOperations: Properties or Fields is not available for api [/api/v18.2/metadata/objects/documents/types/site_management__c] , will use input list [[name__v, type__v, subtype__v, classification__v, lifecycle__v, status__v, study__v, product__v, id]] if configured to build VQL query

INFO 2019-06-06 10:39:45,098 [[MuleRuntime].io.27: [veevavault-connector-demo].get-documents-operationFlow.BLOCKING @2dd2ffaf] [event: 99716950-8818-11e9-90e2-d61515f42856] org.mule.extension.veevavault.internal.pagination.GetDocumentsPagingProvider: Query Build :: SELECT name__v, type__v, subtype__v, classification__v, lifecycle__v, status__v, study__v, product__v, id FROM documents WHERE name__v= 'F22611234--6764'

INFO 2019-06-06 10:39:46,024 [[MuleRuntime].io.27: [veevavault-connector-demo].get-documents-operationFlow.BLOCKING @2dd2ffaf] [event: 99716950-8818-11e9-90e2-d61515f42856] org.mule.extension.veevavault.internal.service.HttpRequestService: Response received for sync http request :: 'https://[vault-domain]/api/v18.2/query?q=SELECT+name__v%2C+type__v%2C+subtype__v%2C+classification__v%2C+lifecycle__v%2C+status__v%2C+study__v%2C+product__v%2C+id+FROM+documents+WHERE+name__v%3D+%27F22611234--6764%27++LIMIT+1000+OFFSET+0' in 925 milliseconds.
----
+
[%header%autowidth.spread]
|===
|*Field* |*Description*
|*API Limit Threshold* |Enter the Veeva Vault API threshold limit. When this threshold is reached or exceeded, the connector waits the specified time. The default is `200`.
|*Wait Time* |Enter the amount of time the connector should wait if the API limit threshold is reached or exceeded. The default is `5`.
|*Time Unit* |Select the time unit for the wait time. The default is `MINUTES`.
|===
+
*Daily API Limit Exceed Profile:*
+
The daily API limit exceed profile configuration (*Connector Configuration > Advanced Tab*) to use if the daily API limit of the Veeva Vault API reaches or exceeds the configured threshold. The daily limit is the total number of API calls within any 24-hour window on a daily rolling basis.
+
If the *Daily API Limit Exceed Profile* is enabled (default), then the connector evaluates the Veeva Vault API's response header (*X-VaultAPI-DailyLimitRemaining*) for the specified value of the threshold, and throws an exception indicating that the daily API limit is exceeded. The exception continues to be thrown for each job or request created until the daily limit is reset or rolled over the next day.
+
Following is an example log that shows a warning at *2019-06-06 10:47:31,698* and an error at *2019-06-06 10:47:31,699*:
+
----

WARN 2019-06-06 10:47:31,698 [[MuleRuntime].io.44: [veevavault-connector-demo].get-documents-operationFlow.BLOCKING @108e7f43] [event: 624cfa50-881a-11e9-90e2-d61515f42856] org.mule.extension.veevavault.internal.service.HttpRequestService: Veeva Daily API Limit remaining calls [10000] has exceeded/reached an Daily API Limit Profile threshold set as [10000]. As per API Limit Profile, Veeva Vault Connector will throw an exception.

ERROR 2019-06-06 10:47:31,699 [[MuleRuntime].io.44: [veevavault-connector-demo].get-documents-operationFlow.BLOCKING @108e7f43] [event: 624cfa50-881a-11e9-90e2-d61515f42856] org.mule.extension.veevavault.internal.service.HttpRequestService: Exception caught while processing Sync request ::: https://xxxxx-xxxxx.veevavault.com/api/v20.1/metadata/vobjects/site__v, Exception ::: \{"responseStatus":"FAILURE","errors":[\{"type":"API_LIMIT_EXCEED","message":"The Veeva Vault Connector has reached/exceeded daily API limit remaining calls [10000]. The configured daily api limit threshold is \(10000\)"}\]}

ERROR 2019-06-06 10:47:31,767 [[MuleRuntime].io.44: [veevavault-connector-demo].get-documents-operationFlow.BLOCKING @108e7f43] [event: 624cfa50-881a-11e9-90e2-d61515f42856] org.mule.runtime.core.internal.exception.OnErrorPropagateHandler:

**********************************************************************************

Message : An error occurred from the Veeva Vault API.
Error Code: API_LIMIT_EXCEED.
Original Error Message: The Veeva Vault Connector has reached/exceeded daily API limit remaining calls [10000]. The configured daily api limit threshold is (10000).
Error type : VEEVAVAULT:API_LIMIT_EXCEED

**********************************************************************************
----
+

[%header%autowidth.spread]
|===
|*Field* |*Description*
|*API Limit Threshold* |Enter the API threshold limit. When the specified limit is reached or exceeded, the connector waits for the specified time. The default is `10000`.
|===
+
*Response Timeout:*
+
The maximum time, in milliseconds, that the connector waits for the Veeva Vault response. If the maximum time is exceeded, a timeout exception is thrown. The default is 30,000 milliseconds.
+
[%header%autowidth.spread]
|===
|*Field* |*Description*
|*Response Timeout* |Enter the timeout value for the connector to wait for a response from the Veeva Vault instance. The default is 30 seconds.
|===

== Next Step

After configuring Veeva Vault Connector for use in Studio, see the xref:veevavault-connector-config-topics.adoc[Additional Configuration Information] topic for more configuration steps.

== See Also

* xref:studio::to-download-and-install-studio.adoc[Downloading and Installing Anypoint Studio]
* https://help.mulesoft.com[MuleSoft Help Center]
